refactor 1, sonar+findbugs 1184 issues to 255